# yt2stems

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  demucs_benchmark.sh  install-yt2stems.sh  pyproject.toml  yt2stems  yt2stems-setup
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: license-options.md  open-source-release-checklist.md  releasing.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
src/yt2stems/: __init__.py  benchmark.py  cli.py  config.py  constants.py  install.py  tooling.py  utils.py  workflow.py
tests/: test_config.py  test_install.py  test_workflow.py
